2009-06-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSFFIInvocation.m
	(-initWithCallback:returnp:values:frame:signature:): Fix bug
	#26419 by removing bogus code which was used on targets where
	MFRAME_STRUCT_BYREF is defined.

2009-06-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: When converting from a characterset
	to unicode, and we know that there is a one to one correspondence
	between the characterset values and unicode values, shift the
	buffer sizing outsize the loop through the characters to avoid
	unnecessary checks for the end of the buffer in each iteration.
	Optimisation suggested by Fred Kiefer

2009-06-05 18:12-EDT Gregory John Casamento <greg.casamento@gmail.com>
	
	* Source/NSDistantObject.m: NSProxy subclasses must override -init 
	or an exception will be thrown. This change calls the forwarding 
	mechanism to invoke -init on the remote object.
	Patch by David Chisnall <theraven@sucs.org>
	
2009-06-04 Georg Fleischmann <G.Fleischmann@vhf.de>

	* Source/Additions/unicode/nextstep.h: Fixups for encoding mapping.

2009-06-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSUndoManager.m (-undo, -redo): Call -_begin instead of
	-beginUndoGrouping to avoid creation of a spurious top-level group
	while performing undo or redo operations, which was causing the
	recorded actions to be dropped silently.

	* Source/NSUndoManager.m (-beginUndoGrouping): Post
	NSUndoManagerCheckpointNotification also during undo as on OS X.

	* Source/NSUndoManager.m (-endUndoGrouping): Post
	NSUndoManagerWillCloseUndoGroupNotification before changing the
	group so that clients see the same grouping level as on OS X.

2009-05-29 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSObject.m: Atomic increment and decrement functions for m68k
	
2009-05-29 Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile: Use $(warning ...) instead of $(info ...) since
	$(info ...) exists only in GNU make >= 3.81.